# my_qt_graphics

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  graphics_view_zoom.cpp  graphics_view_zoom.h  graphicsarrowitem.cpp  graphicsarrowitem.h  graphicshexagonitem.cpp  graphicshexagonitem.h  graphicsview.cpp  graphicsview.h
example/: CMakeLists.txt  CollimatorHorizontalSectionView.cpp  CollimatorHorizontalSectionView.h  CollimatorSectionalView.cpp  CollimatorSectionalView.h  CollimatorVerticalSectionView.cpp  CollimatorVerticalSectionView.h  DockCollimator.cpp  DockCollimator.h  DoubleSpinBoxSliderWidget.cpp  DoubleSpinBoxSliderWidget.h  HexagonShape.cpp  HexagonShape.h  SectionShape.cpp  SectionShape.h  SquareShape.cpp  SquareShape.h  UmbraView.cpp  UmbraView.h  UmbraWidget.cpp  UmbraWidget.h  data_types.h  main.cpp  mainwindow.cpp  mainwindow.h  qUtil.h  shape_hexagon.cpp  shape_hexagon.h  shape_square.cpp  shape_square.h  shape_square_thick.cpp  shape_square_thick.h
